@@ -502,7 +502,7 @@ Size=20x4
 
 # Character map to to map ISO-8859-1 to the LCD's character set
 # [default: hd44780_default; legal: hd44780_default, hd44780_euro,
-#  ea_ks0073, sed1278f_0b, hd44780_koi8_r ]
+#  ea_ks0073, sed1278f_0b, hd44780_koi8_r, upd16314 ]
 CharMap=hd44780_default
 
 # If your display is slow and cannot keep up with the flow of data from
@@ -573,7 +573,9 @@ Device=/dev/lcd0
 # display dimensions
 Size=16x2
 
-
+# Character map to to map ISO-8859-1 to the displays character set.
+# [default: none; legal: none, hd44780_euro, upd16314, hd44780_koi8_r]
+CharMap=hd44780_euro
 
 ## Soundgraph iMON LCD ##
 [imonlcd]
@@ -945,6 +947,15 @@ ConnectionType=classic
 # Port where the LPT is. Usual values are 0x278, 0x378 and 0x3BC
 Port=0x378
 
+# Select the interface type (wiring) for the display. Supported values are
+# 68 for 68-style connection (RESET level high) and 80 for 80-style connection
+# (RESET level low). [legal: 68, 80; default: 80]
+InterfaceType=68
+
+# On fast machines it may be necessary to slow down transfer to the display.
+# If this value is set to zero, delay is disabled. Any value greater than
+# zero slows down each write by one microsecond. [legal: 0-1000; default 1]
+DelayMult=0
 
 
 ## serial POS display driver ##
